--- a/Kotlin Koans/links.properties
+++ b/Kotlin Koans/links.properties
@@ -41,41 +41,41 @@ function-literals-with-receiver=https://kotlinlang.org/docs/reference/lambdas.ht
 
 # Introduction
 kotlin_stdlib=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/
-join_to_string=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/join-to-string.html
-sorted_descending=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/sorted-descending.html
+join_to_string=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/join-to-string.html
+sorted_descending=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sorted-descending.html
 
 # Conventions
-closed_range=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-closed-range/index.html
-iterable=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-iterable/
+closed_range=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-closed-range/
+iterable=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-iterable/
 
 # Collections
-all=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/all.html
-any=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/any.html
-count=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/count.html
-find=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/find.html
-map=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/map.html
-filter=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/filter.html
-flat-map=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/flat-map.html
-fold=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/fold.html
-group-by=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/group-by.html
-to-set=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/to-set.html
-to-list=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/to-list.html
-max=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/max.html
-min=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/min.html
-max-by=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/max-by.html
-min-by=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/min-by.html
-partition=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/partition.html
-sorted=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/sorted.html
-sorted-by=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/sorted-by.html
-sum=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/sum.html
-sum-by=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/sum-by.html
-sum-by-double=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/sum-by-double.html
+all=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/all.html
+any=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/any.html
+count=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/count.html
+find=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/find.html
+map=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/map.html
+filter=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/filter.html
+flat-map=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/flat-map.html
+fold=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/fold.html
+group-by=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/group-by.html
+to-set=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/to-set.html
+to-list=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/to-list.html
+max=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/max.html
+min=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/min.html
+max-by=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/max-by.html
+min-by=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/min-by.html
+partition=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/partition.html
+sorted=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sorted.html
+sorted-by=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sorted-by.html
+sum=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sum.html
+sum-by=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sum-by.html
+sum-by-double=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sum-by-double.html
 
 # Properties
-apply=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/apply.html
+apply=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/apply.html
 
 # Generics
-to-collection=http://kotlinlang.org/api/latest/jvm/stdlib/kotlin/to-collection.html
+to-collection=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/to-collection.html
 
 # ==============
 # Local Links
