More links updated

--- a/Kotlin Koans/links.properties
+++ b/Kotlin Koans/links.properties
@@ -45,8 +45,8 @@ join_to_string=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/k
 sorted_descending=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sorted-descending.html
 
 # Conventions
-closed_range=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-closed-range/
-iterable=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-iterable/
+closed_range=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.ranges/kotlin.-closed-range/index.html
+iterable=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/
 
 # Collections
 all=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/all.html
