Fixed link for 'apply'

--- a/Kotlin Koans/links.properties
+++ b/Kotlin Koans/links.properties
@@ -72,7 +72,7 @@ sum-by=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-i
 sum-by-double=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/sum-by-double.html
 
 # Properties
-apply=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/apply.html
+apply=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/apply.html
 
 # Generics
 to-collection=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/kotlin.-iterable/to-collection.html
