Add CodinGame support

--- a/course.properties
+++ b/course.properties
@@ -3,10 +3,12 @@ COURSE_DESCRIPTION=Kotlin Koans
 COURSE_LANGUAGE=Kotlin
 CONVERT_WB=true
 CONVERT_EE=true
+CONVERT_CG=true
 PACK_ZIP=false
 ZIP_FILE_NAME=Kotlin Koans.zip
 SOURCE_DIR=Kotlin Koans
 CONVERTED_DIR_EE=Kotlin Koans EE Plugin
 CONVERTED_DIR_WB=Kotlin Koans WebDemo
+CONVERTED_DIR_CG=Kotlin Koans CodinGame
 LINKS_ENABLED=true
 LINKS_PROPERTIES=links.properties
